chore: ignore node_modules and normalize line endings (LF)